--- a/configs/DDR4-config.cfg
+++ b/configs/DDR4-config.cfg
@@ -3,10 +3,10 @@
 # Comments start with #
 # There are restrictions for valid channel/rank numbers
  standard = DDR4
- channels = 1
+ channels = 2
  ranks = 1
  speed = DDR4_2400R
- org = DDR4_4Gb_x8
+ org = DDR4_8Gb_x4
 # record_cmd_trace: (default is off): on, off
  record_cmd_trace = off
 # print_cmd_trace: (default is off): on, off
@@ -20,9 +20,9 @@
  early_exit = on
 # early_exit = on, off (default value is on)
 # If expected_limit_insts is set, some per-core statistics will be recorded when this limit (or the end of the whole trace if it's shorter than specified limit) is reached. The simulation won't stop and will roll back automatically until the last one reaches the limit.
- expected_limit_insts = 200000000
+ expected_limit_insts = 32768
 #  warmup_insts = 100000000
- warmup_insts = 0
+ warmup_insts = 
  cache = no
 # cache = no, L1L2, L3, all (default value is no)
  translation = None
